--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <service android:name=".mediaplayer.MediaPlayerService" />
         <service android:name=".LibraryUpdater" />
         <service android:name=".deezer.DeezerLibraryUpdater" />
-        <service android:name=".network.StateService" />
+        <service android:name=".library.StateService" />
         <service android:name=".CoverUpdaterService" />
 
 
@@ -80,7 +80,7 @@
             android:launchMode="singleTop" >
         </activity>
         <activity
-            android:name=".network.ui.NetworkActivity"
+            android:name=".library.ui.NetworkActivity"
             android:label="@string/title_activity_network" >
         </activity>
     </application>
