renaming package to nuance

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "27.0.3"
 
     defaultConfig {
-        applicationId "com.spipi.spipimediaplayer"
+        applicationId "com.spisoft.nuance"
         minSdkVersion 8
         targetSdkVersion 27
         versionCode 33
